fix : trying to remove the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -252,18 +252,18 @@ html {
 @layer base {
   * {
     @apply border-border outline-ring/50;
-    scrollbar-width: none;      
-    -ms-overflow-style: none;
     
   }
   *::-webkit-scrollbar {
     display: none;               /* Chrome/Safari */
   }
-  html,
+  html{
+ overflow: auto;
+    scroll-behavior: smooth;
+  }
   body {
     @apply bg-background text-foreground;
-    overflow: auto;
-    scroll-behavior: smooth;
+   
   }
 }
 
